--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
 		"node": ">= 0.6.0"
 	},
 	"dependencies": {
-		"laeh2": "0.2.0",
-		"express": "2.5.6",
-		"optimist": "0.2.x",
-		"github-flavored-markdown": "1.0.0",
-		"utilz": "0.1.3",
-		"jade": "0.20.0",
-		"stylus": "0.22.6",
-		"nib": "0.3.2",
-		"underscore": "1.3.1",
-		"socket.io": "0.8.7"
+		"express": "*",
+		"github-flavored-markdown": "*",
+		"jade": "*",
+		"laeh2": "*",
+		"nib": "*",
+		"optimist": "*",
+		"request": "*",
+		"socket.io": "*",
+		"stylus": "*",
+		"underscore": "*",
+		"utilz": "*"
 	},
 	"devDependencies": {
 	}
