--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"name": "gfms",
 	"description": "Github Flavored Markdown Server",
 	"keywords": [ "markdown", "server", "local", "reloading" ],
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"homepage": "http://github.com/ypocat/gfms",
 	"repository": {
 		"type": "git",
@@ -33,5 +33,8 @@
 		"utilz": "*"
 	},
 	"devDependencies": {
-	}
+	},
+	"licenses": [
+		{  "type" : "MIT", "url" : "https://raw.github.com/ypocat/gfms/master/LICENSE" }
+	]
 }
