--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
                 "gfms": "./bin/gfms"
         },
         "engines": {
-                "node": ">=0.6.0 <0.7.0"
+                "node": "*"
         },
-        "engineStrict": true,
         "dependencies": {
                 "express": "2.5.11",
                 "github-flavored-markdown": "*",
